// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "async.async.js?ver=80be5ce1906c659d3ef4",
    194,
    {
      "fullhash": "80be5ce1906c659d3ef4",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.super-compressed.js.gz?ver=80be5ce1906c659d3ef4",
      },
      "size": 194,
    },
  ],
  [
    "async.async.super-compressed.js.gz?ver=80be5ce1906c659d3ef4",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.js?var=80be5ce1906c659d3ef4",
    16379,
    {
      "fullhash": "80be5ce1906c659d3ef4",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.super-compressed.js.gz?var=80be5ce1906c659d3ef4",
      },
      "size": 16379,
    },
  ],
  [
    "main.super-compressed.js.gz?var=80be5ce1906c659d3ef4",
    4112,
    {
      "compressed": true,
      "immutable": true,
      "size": 4112,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): warnings 1`] = `[]`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "assets/js/async.async.js.super-compressed.gz?ver=04d7af944248c8996c97#hash",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "assets/js/async.async.js?ver=04d7af944248c8996c97#hash",
    194,
    {
      "fullhash": "04d7af944248c8996c97",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "assets/js/async.async.js.super-compressed.gz?ver=04d7af944248c8996c97#hash",
      },
      "size": 194,
    },
  ],
  [
    "assets/js/main.js.super-compressed.gz?var=04d7af944248c8996c97#hash",
    4133,
    {
      "compressed": true,
      "immutable": true,
      "size": 4133,
    },
  ],
  [
    "assets/js/main.js?var=04d7af944248c8996c97#hash",
    16405,
    {
      "fullhash": "04d7af944248c8996c97",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "assets/js/main.js.super-compressed.gz?var=04d7af944248c8996c97#hash",
      },
      "size": 16405,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): warnings 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    78117,
    {
      "compressed": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    672,
    {
      "compressed": true,
      "size": 672,
    },
  ],
  [
    "async.async.js.gz?ver=9d8362ae2149fab4fcad",
    194,
    {
      "compressed": true,
      "size": 194,
    },
  ],
  [
    "async.async.js?ver=9d8362ae2149fab4fcad#hash",
    194,
    {
      "fullhash": "9d8362ae2149fab4fcad",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "async.async.js.gz?ver=9d8362ae2149fab4fcad",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz?var=9d8362ae2149fab4fcad",
    16384,
    {
      "compressed": true,
      "size": 16384,
    },
  ],
  [
    "main.js?var=9d8362ae2149fab4fcad#hash",
    16384,
    {
      "fullhash": "9d8362ae2149fab4fcad",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "main.js.gz?var=9d8362ae2149fab4fcad",
      },
      "size": 16384,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): warnings 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "size": 390,
    },
  ],
  [
    "async.async.js.gz?ver=9d8362ae2149fab4fcad",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=9d8362ae2149fab4fcad#hash",
    194,
    {
      "fullhash": "9d8362ae2149fab4fcad",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz?ver=9d8362ae2149fab4fcad",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz?var=9d8362ae2149fab4fcad",
    4118,
    {
      "compressed": true,
      "size": 4118,
    },
  ],
  [
    "main.js?var=9d8362ae2149fab4fcad#hash",
    16384,
    {
      "fullhash": "9d8362ae2149fab4fcad",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz?var=9d8362ae2149fab4fcad",
      },
      "size": 16384,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}): warnings 1`] = `[]`;

exports[`"filename" option show work: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "assets/scripts/async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "assets/scripts/async.async.js?ver=39c3401997acdd772e46#hash",
    194,
    {
      "fullhash": "39c3401997acdd772e46",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "assets/scripts/async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "assets/scripts/main.js.gz",
    4134,
    {
      "compressed": true,
      "immutable": true,
      "size": 4134,
    },
  ],
  [
    "assets/scripts/main.js?var=39c3401997acdd772e46#hash",
    16410,
    {
      "fullhash": "39c3401997acdd772e46",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "assets/scripts/main.js.gz",
      },
      "size": 16410,
    },
  ],
]
`;

exports[`"filename" option show work: errors 1`] = `[]`;

exports[`"filename" option show work: warnings 1`] = `[]`;
